# WordCounterAndroid

./: .gitignore  README.md
Utils/: build_libiconv_android.sh
app/: .gitignore  ADBConnect.bat  ADBDisconnect.bat  GitClone.bat  build.gradle
app/src/androidTest/java/com/romaktion/wordcounter/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  native-lib.cpp
app/src/main/cpp/WordCounter/: CMakeLists.txt  main.cpp  native-lib.cpp  pch.h
app/src/main/cpp/libasync/: CMakeLists.txt  await.h
app/src/main/cpp/libtext/: CMakeLists.txt  constants.h  text.cpp  text.h
app/src/main/cpp/libtiming/: CMakeLists.txt  timing.cpp  timing.h
app/src/main/cpp/libwordcounter/: CMakeLists.txt  wordcounter.cpp  wordcounter.h
app/src/main/java/com/romaktion/wordcounter/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/romaktion/wordcounter/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
